# clearpass-api-scripts

./: .gitignore  README.MD  README.md  config.yaml.example  cppm-certsync.py  pol-elements-from-csv.py  pyproject.toml  requirements.txt
common/: __init__.py  config.py  cppmauth.py  notify.py
cppmcli/: __init__.py  api_identities.py  cleaner.py  cli.py  clicommon.py  clishow.py  clisync.py  config.py  cppmauth.py  logger.py  objects.py  render.py  response.py  utils.py  vscodeargs.py
